<resources>

    <string name="app_name">iFit360</string>
    <!-- splash -->
    <string name="splash_one_item_pass">Skip</string>
    <string name="splash_one_item_1">Keep healthy</string>
    <string name="splash_one_item_2">Record sports data</string>
    <string name="splash_one_item_3">Track your fitness</string>
    <string name="splash_two_item_1">Health Alarm</string>
    <string name="splash_two_item_2">Ble.4.0 save power</string>
    <string name="splash_two_item_3">Call Reminder</string>
    <!-- setting -->
    <string name="setting_bluetooth">Turn on the phone bluetooth</string>
    <string name="setting_pre">Back</string>
    <string name="setting_next">Next</string>
    <string name="setting_bracelet">Turn on the wristband</string>
    <string name="setting_bracelet_tips">Long press the indicator on wristband for 5 seconds until screen lights up</string>
    <string name="setting_device">Pairing your phone with wristband</string>
    <string name="setting_device_search">Searching for wristband</string>
    <string name="setting_device_search_repeat">Research for wristband</string>
    <string name="setting_device_select_tips">Please choose wristband</string>
    <string name="setting_device_search_confirm">Ok</string>
    <string name="setting_device_conn_success">Pairing Successfully</string>
    <string name="setting_device_conn_failure">Pairing failed</string>
    <string name="setting_userinfo_name_hint">Nickname</string>
    <string name="setting_userinfo_sex">Gender</string>
    <string name="setting_userinfo_birthday">Age</string>
    <string name="setting_userinfo_height">Height</string>
    <string name="setting_userinfo_height_unit">cm</string>
    <string name="setting_userinfo_weight">Weight</string>
    <string name="setting_userinfo_weight_unit">kg</string>
    <string name="setting_userinfo_name_not_null">Nickname can not be empty</string>
    <string name="setting_userinfo_weight_not_null">Weight can not be empty</string>
    <string name="setting_userinfo_height_not_null">Height can not be empty</string>
    <string name="setting_userinfo_height_size">Height should be in the range of 100-200cm</string>
    <string name="setting_userinfo_weight_size">Weight should be within the range of 30-150kg</string>
    <string name="setting_userinfo_age_size">Age should be in the range of 5-99 years</string>
    <string name="setting_target_title">Set Goals</string>
    <string name="setting_target_relaxed">Easy</string>
    <string name="setting_target_recommend">Healthy</string>
    <string name="setting_target_active">Active</string>
    <string name="setting_target_step">Steps</string>
    <string name="setting_target_calorie">Cals</string>
    <string name="setting_target_calorie_unit">Cals</string>
    <string name="setting_target_tips">10,000 steps per day to be healthier</string>
    <string name="setting_target_amount_to">Equivalent</string>
    <string name="setting_target_minutes">%1$sMins</string>
    <string name="setting_target_finish">Complete</string>
    <string name="setting_target_min">please set the goal</string>
    
    <!-- main -->
    <string name="main_tab_step">Pedometer</string>
    <string name="main_tab_sleep">Sleeping</string>
    <string name="main_tab_run">Running</string>
    <string name="main_conn_tips">Wristband is not conected with phone, please click here</string>
    <string name="main_exit_tips">Are you sure you want to quit?</string>
    <string name="main_exit_tips_confirm">Ok</string>
    <string name="main_exit_tips_cancel">Cancel</string>
    <!-- step -->
    <string name="step_syncdata_waiting">Syncing data…</string>
    <string name="step_history">History</string>
    <string name="step_duration">Time</string>
    <string name="step_distance">Mileage</string>
    <string name="step_duration_unit">%1$sh%2$smin</string>
    <string name="step_distance_unit">Km</string>
    <string name="step_heart_rate_unit">/Min</string>
    <!-- mycenter -->
    <string name="center_title">Personal Center</string>
    <string name="center_name">Nickname</string>
    <string name="center_info">Personal Profile</string>
    <string name="center_info_tips">Gender, Age information</string>
    <string name="center_target">Set Sports Goal</string>
    <string name="center_target_tips">Daily steps</string>
    <string name="center_clear">Clear Data</string>
    <string name="center_clear_tips">Clear APP and wristband motion data</string>
    <!-- clear -->
    <string name="clear_title">Clear Data</string>
    <string name="clear_bracelet">Wristband</string>
    <string name="clear_phone">App</string>
    <string name="clear_tips">Are you sure you want to clear the data?</string>
    <string name="clear_tips_confirm">Ok</string>
    <string name="clear_tips_cancel">Cancel</string>
    <string name="clear_fail_conn_device">Please connect wristband</string>
    <string name="clear_success">Clear successfully</string>
    <!-- userinfo -->
    <string name="userinfo_title">Personal Profile</string>
    <string name="userinfo_confirm">Complete</string>
    <string name="userinfo_name_hint">Nickname</string>
    <string name="userinfo_sex">Gender</string>
    <string name="userinfo_birthday">Age</string>
    <string name="userinfo_height">Height</string>
    <string name="userinfo_height_unit">cm</string>
    <string name="userinfo_weight">Weight</string>
    <string name="userinfo_weight_unit">kg</string>
    <string name="userinfo_name_not_null">Nickname can not be empty</string>
    <string name="userinfo_weight_not_null">Nickname can not be empty</string>
    <string name="userinfo_height_not_null">Nickname can not be empty</string>
    <string name="userinfo_height_size">Height should be in the range of 100-200cm</string>
    <string name="userinfo_weight_size">Weight should be within the range of 30-150kg</string>
    <string name="userinfo_age_size">Age should be in the range of 5-99 years</string>
    <!-- target -->
    <string name="target_title">Set Goal</string>
    <!-- left -->
    <string name="alert_low_battery">Low battery remind</string>
    <string name="alert_low_battery_tips">To remind when wristband power is less than 25%</string>
    <string name="alert_find_band">Find wristband</string>
    <string name="alert_find_band_tips">Wristband shocking when connecting with phone</string>
    <string name="alert_find_band_conn_false">Please connect wristband</string>
    <string name="alert_coming_call">Call Reminder</string>
    <string name="alert_coming_call_open">On</string>
    <string name="alert_coming_call_close">Off</string>
    <string name="alert_coming_call_tips">Wristband shock when phone call comes</string>
    <string name="alert_alarm">Alarm</string>
    <string name="alert_alarm_tips">Set wristband alarm time</string>
    <string name="bind_bracelet">Bind wristband</string>
    <string name="bind_bracelet_tips">To pair and bind wristband</string>
    <string name="bracelet_reset">Reset</string>
    <string name="bracelet_reset_tips">Reset all the configuration information</string>
    <string name="bracelet_reset_alert">Are you sure you want to clear all the App settings?</string>
    <string name="bracelet_reset_alert_confirm">Ok</string>
    <string name="bracelet_reset_alert_cancel">Cancel</string>
    <string name="about">About</string>
    <!-- phone_coming -->
    <string name="phone_coming_alert_title">Call Reminder</string>
    <string name="phone_coming_alert">Phone call reminder</string>
    <string name="phone_coming_alert_contacts">Allow only contact to call</string>
    <string name="phone_coming_nodisturb_time">Setting call not faze period</string>
    <string name="phone_coming_nodisturb_start_time">Start Time</string>
    <string name="phone_coming_nodisturb_end_time">End Time</string>
    <string name="phone_coming_nodisturb_to">to</string>

    <!-- alarm -->
    <string name="alarm_title">Alarm</string>
    <string name="alarm_edit">Edit Alarm</string>
    <string name="alarm_del">Delete</string>
    <string name="alarm_del_tips">Select alarm to delete</string>
    <string name="alarm_del_dialog">Are you sure you want to delete?</string>
    <string name="alarm_del_confirm">Ok</string>
    <string name="alarm_del_cancel">Cancel</string>
    <string name="alarm_finish">Complete</string>
    <string name="alarm_add">Add Alarm</string>
    <string name="alarm_add_hint">Alarm Name</string>
    <string name="alarm_add_time">Time</string>
    <string name="alarm_add_name_null">Alarm Name can not be empty</string>
    <string name="alarm_add_count_max">Could add up to five alarm clock at most</string>
    <string name="alarm_add_success">Added Successfully</string>
    <string name="alarm_awaken">Smart Wake</string>
    <string name="alarm_awaken_tips">Allow the alarm wake me from light sleep state when 30 minutes before the target time</string>
    <!-- device -->
    <string name="bind_title">Bind wristband</string>
    <string name="bind_finish">Complete</string>
    <string name="bind_refresh">Refresh</string>
    <!-- about -->
    <string name="about_title">About</string>
    <string name="about_app">App version</string>
    <string name="about_firmware">Firmware Version</string>
    <string name="about_company">Moko Technology Ltd </string>
    <string name="about_company_english"></string>
    <!-- pull -->
    <string name="pull_to_refresh_pull_label">Pull down to refresh…</string>
    <string name="pull_to_refresh_release_label">Release to refresh…</string>
    <string name="pull_to_refresh_refreshing_label">Syncing Data…</string>

    <!-- Just use standard Pull Down String when pulling up. These can be set for languages which require it -->
    <string name="pull_to_refresh_from_bottom_pull_label">Know More</string>
    <string name="pull_to_refresh_from_bottom_pull_without_data_label">This is the Last page\nThank you!</string>
    <string name="pull_to_refresh_from_bottom_release_label">@string/pull_to_refresh_release_label</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">@string/pull_to_refresh_refreshing_label</string>

    <!-- history -->
    <string name="history_step">Steps</string>
    <string name="history_step_daily">Average</string>
    <string name="history_step_sum">Total</string>
    <string name="history_step_unit">Step</string>
    <string name="history_calorie">Calorie</string>
    <string name="history_calorie_daily">Average</string>
    <string name="history_calorie_sum">Total</string>
    <string name="history_calorie_unit">Cals</string>
    <string name="history_distance">Mileage</string>
    <string name="history_distance_daily">Average</string>
    <string name="history_distance_sum">Total</string>
    <string name="history_distance_unit">Km</string>
    <string name="history_today">Today</string>
    <string name="history_yesterday">Yesterday</string>
    <string name="syn_success">synchronize successfully</string>
    <string name="syn_tips">Long press the indicator for 5 seconds, \nthen click \'Next\' to pair automatically.\nPlease click \'Back\' if failed.</string>
    <string name="syn_tips_2">Long press the indicator for 5 seconds,\nthen click \'complete\' to pair automatically.\nPlease try it again if failed.</string>

</resources>
