<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_ffffff"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:background="@color/blue_40acaf"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="17dp"
        android:paddingRight="17dp" >

        <TextView
            android:id="@+id/tv_bracelet_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:textColor="@color/white_ffffff"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/iv_battery_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitCenter"
            android:src="@drawable/battery_one" />

        <ImageView
            android:id="@+id/iv_conn_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="17dp"
            android:scaleType="fitCenter"
            android:src="@drawable/conn_state_failure" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_alert_low_battery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="13dp"
        android:paddingLeft="17dp"
        android:paddingRight="17dp"
        android:paddingTop="13dp" >

        <TextView
            android:id="@+id/tv_alert_low_battery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alert_low_battery"
            android:textColor="@color/grey_3a3a3a"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_alert_low_battery"
            android:layout_marginTop="6dp"
            android:text="@string/alert_low_battery_tips"
            android:textColor="@color/grey_d5d5d5"
            android:textSize="12sp" />

        <CheckBox
            android:id="@+id/cb_alert_low_battery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:button="@drawable/checkbox_selector" />
    </RelativeLayout>

    <View style="@style/divider_line" />

    <RelativeLayout
        android:id="@+id/rl_alert_coming_call"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="13dp"
        android:paddingLeft="17dp"
        android:paddingRight="17dp"
        android:paddingTop="13dp" >

        <TextView
            android:id="@+id/tv_alert_coming_call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alert_coming_call"
            android:textColor="@color/grey_3a3a3a"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_alert_coming_call"
            android:layout_marginTop="6dp"
            android:text="@string/alert_coming_call_tips"
            android:textColor="@color/grey_d5d5d5"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_alert_coming_call_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:text="@string/alert_coming_call_open"
            android:textColor="@color/grey_3a3a3a"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:scaleType="fitCenter"
            android:src="@drawable/go" />
    </RelativeLayout>

    <View style="@style/divider_line" />

    <RelativeLayout
        android:id="@+id/rl_alert_alarm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="13dp"
        android:paddingLeft="17dp"
        android:paddingRight="17dp"
        android:paddingTop="13dp" >

        <TextView
            android:id="@+id/tv_alert_alarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alert_alarm"
            android:textColor="@color/grey_3a3a3a"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_alert_alarm"
            android:layout_marginTop="6dp"
            android:text="@string/alert_alarm_tips"
            android:textColor="@color/grey_d5d5d5"
            android:textSize="12sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:scaleType="fitCenter"
            android:src="@drawable/go" />
    </RelativeLayout>

    <View style="@style/divider_line" />

    <RelativeLayout
        android:id="@+id/rl_bind_bracelet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="13dp"
        android:paddingLeft="17dp"
        android:paddingRight="17dp"
        android:paddingTop="13dp" >

        <TextView
            android:id="@+id/tv_bind_bracelet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bind_bracelet"
            android:textColor="@color/grey_3a3a3a"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_bind_bracelet"
            android:layout_marginTop="6dp"
            android:text="@string/bind_bracelet_tips"
            android:textColor="@color/grey_d5d5d5"
            android:textSize="12sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:scaleType="fitCenter"
            android:src="@drawable/go" />
    </RelativeLayout>

    <View style="@style/divider_line" />

    <RelativeLayout
        android:id="@+id/rl_bracelet_reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="13dp"
        android:paddingLeft="17dp"
        android:paddingRight="17dp"
        android:paddingTop="13dp" >

        <TextView
            android:id="@+id/tv_bracelet_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bracelet_reset"
            android:textColor="@color/grey_3a3a3a"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_bracelet_reset"
            android:layout_marginTop="6dp"
            android:text="@string/bracelet_reset_tips"
            android:textColor="@color/grey_d5d5d5"
            android:textSize="12sp" />
    </RelativeLayout>

    <View style="@style/divider_line" />

    <RelativeLayout
        android:id="@+id/rl_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:paddingLeft="17dp"
        android:paddingRight="17dp"
        android:paddingTop="20dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:textColor="@color/grey_3a3a3a"
            android:textSize="18sp" />
    </RelativeLayout>

    <View style="@style/divider_line" />

</LinearLayout>